# result_pinner

./: CMakeLists.txt  README.md  default.nix  package.xml  setup.py
launch/: pinner.launch
scripts/: pinner_node
